--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
         <button class="button">.</button>
         <button class="button">=</button>
         <button class="button">-</button>
+        <button class="reset">Reset History</button>
     </div>
     </div>
 
+    <div class="history-container">
+        <h2>History</h2>
+        <div class="history"></div>
+    </div>
+
+    
     <script src="script.js"></script>
 </body>
 
